PCM - corrects book button width on mobile

--- a/assets/scss/components/_components.nav-menu.scss
+++ b/assets/scss/components/_components.nav-menu.scss
@@ -231,7 +231,7 @@
     font-weight: 500;
     color: white;
       @include mq ($from: desktop){
-        padding:$act-unit-s $act-unit;
+        padding:$act-unit-s $act-unit 2px;
       }
     }
     &:hover{
@@ -326,7 +326,10 @@
      }
      .is-icon-pos-right &{
        margin-left: 0;
-       margin-right: $act-unit-s;
+       @include mq ($from: desktop){
+         display: flex;
+         flex-direction: row-reverse;
+       }
      }
   }
   .is-icon-pos-right &{
